--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="profile">
                         <img class="profile-img" src="images/male-user.png" alt="">
                     <h2>Hello.</h2>
-                    <p class="intro" > I am software engineer by profession and I have been doing Automation testing for the past 6 years which imvolves Automating web applications and apis. I am currently working for cognizant which is US based MNC.
+                    <p class="intro" > I am software engineer by profession and I have been doing Automation testing for the past 7 years and 3 Months which imvolves Automating web applications and apis. I am currently working for cognizant which is US based MNC.
                     </p>
                 </div>
                 <hr>
