--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2>Get In Touch</h2>
                     <h3>If you love Automation and Programming.</h3>
                     <p class ="contact-message">Reach out to me by pressing contact me and we will talk about the automation frameworks and testing.</p>
-                    <a href="prakashkkpandey@gmail.com" class="btn" >CONTACT ME</a>
+                    <a href=""http://formspree.io/prakashkkpandey@gmail.com" class="btn" >CONTACT ME</a>
                 </div>
             </div>
             <div class="bottom-container">
