--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h3>If you love Automation and Programming.</h3>
                     <p class ="contact-message">Reach out to me by pressing contact me and we will talk about the automation frameworks and testing.</p>
                    <form accept-charset="UTF-8" action="https://usebasin.com/f/123456xabcdef" enctype="multipart/form-data" method="POST">
-                  <a href="prakashkkpandey@gmail.com" class="btn" >CONTACT ME</a>                                  
+                  <a href="mailto:prakashkkpandey@gmail.com" class="btn" >CONTACT ME</a>                                  
                 </div>
             </div>
             <div class="bottom-container">
